--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
   - "3.6"
-# command to install dependencies
 install:
+  - "pip install -r requirements.txt"
   - "pip install -r tests/test-requirements.txt"
-# command to run tests
 script: pytest tests
