Attempt to use coverage, pytest-cov, and coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ python:
 install:
   - "pip install -r requirements.txt"
   - "pip install -r tests/test-requirements.txt"
-script: pytest tests
+script:
+    - pytest --cov-report= --cov=asm68 tests/
+after_success:
+    - coveralls
