Adds cosmic-ray configurations.

--- a/cosmic-ray-pytest-celery.yml
+++ b/cosmic-ray-pytest-celery.yml
@@ -6,7 +6,7 @@ exclude-modules:
 
 test-runner:
   name: pytest
-  args: --hypothesis-seed=122806734047141953639645680954557793359 tests
+  args: tests
 
 execution-engine:
-  name: local
+  name: celery3
